--- a/views/Clothes.ejs
+++ b/views/Clothes.ejs
@@ -277,7 +277,7 @@
                   
     </script>
     <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0i-DE5npqCIwQ5SGDZOwLAuOVmzZRWEA&libraries=places&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=API_Key&libraries=places&callback=initMap"
         async defer>
     </script>
 </body>
