--- a/views/index.ejs
+++ b/views/index.ejs
@@ -894,7 +894,7 @@ margin-left: -65px;
             <img src="/images/cloth.png">
           </div>
           <div class=content>
-            <h3>Cloth</h3>
+            <h3>Clothes</h3>
             <p>Your donation of clothing can bring warmth, comfort, and dignity to someone in need, giving them the confidence to face life's challenges with optimism. </p>
 
 
@@ -908,7 +908,7 @@ margin-left: -65px;
             <img  src="/images/fund.png">
           </div>
           <div class=content>
-            <h3>Fund</h3>
+            <h3>Funds</h3>
             <p>By donating to those in need, you have the power to uplift someone's spirits, provide hope for a better future, and make a positive impact on the world. Donate Now! </p>
 
 
