--- a/views/Donate.ejs
+++ b/views/Donate.ejs
@@ -135,7 +135,7 @@ button:hover {
   
       <div class="col-lg-4 col-md-6 col-sm-1" id="donation-cards">
         <div class="card" style="width: 18rem;" id="donation-cards-inside">
-          <img src="/images/cloth.png" class="card-img-top" alt="ClothsDonation">
+          <img src="/images/cloth.png" class="card-img-top" alt="Clothes Donation">
           <div class="card-body">
             <h5 class="card-title">Clothes</h5>
             <p class="Donate-card-para">Your unwanted clothes can bring warmth and comfort to those in need.</p>
